--- a/index.html
+++ b/index.html
@@ -1,12 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <script src="https://kit.fontawesome.com/d67c9323be.js" crossorigin="anonymous"></script>
+
+    <title>Penguin Fashion</title>
 </head>
+
 <body>
-    p
+    <header style="background-color: #FFFBF0;">
+        <nav class="navbar navbar-expand-lg navbar-light ">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo.png" alt="" width="291.11" height="39.27">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Product</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">About us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Contact us</a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+        </nav>
+
+
+        <section>
+            <div class="container px-4">
+                <div class="row gx-5 ">
+                    <div class="col ">
+                        <div class="pt-5 mt-5 ms-5 ps-3">
+
+                            <h1 style="font-weight:700; font-size: 60px;">
+                                <span style="color: #FABE4C;">BE THE PENGUINS</span>
+                                <br>
+                                <span style="color: #363958;">OF WINTER</span>
+
+                            </h1>
+
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, ipsum Lorem ipsum Rem,
+                                ipsum.</p>
+                            <button type="button" class="btn " style="background-color: #A4BC46;"><i
+                                    class="fas fa-shopping-cart"></i> Buy Now</button>
+
+
+                        </div>
+
+
+                    </div>
+                    <div class="col">
+                        <div class="p-3 ">
+                            <img src="images/model.png" class="rounded mx-auto d-block " alt="...">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </header>
+    <main>
+        <section class="m-5 p-3">
+            <h1 >WOMEN JACKET</h1>
+            <div class="card-group m-5">
+                <div class="card m-4 rounded">
+                    <img src="images/jacket-1.png" class="card-img-top p-3 bg-dark "  alt="..." >
+                    <div class="card-body">
+                        <h5 class="card-title">Yellow Coat Jacket</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content.</p>
+                        <div style="display: flex; justify-content:space-between;">
+                            <span>$234</span>
+                            <button type="button" class="btn " style="background-color: #A4BC46;"><i
+                                    class="fas fa-shopping-cart"></i> Buy Now</button>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="card m-4  rounded">
+                    <img src="images/jacket-2.png" class="card-img-top "  alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Yellow Coat Jacket</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content.</p>
+                        <div style="display: flex; justify-content: space-between;">
+                            <span>$234</span>
+                            <button type="button" class="btn " style="background-color: #A4BC46;"><i
+                                    class="fas fa-shopping-cart"></i> Buy Now</button>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="card m-4  rounded">
+                    <img src="images/jacket-3.png" class="card-img-top "  alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Yellow Coat Jacket</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content.</p>
+                        <div style="display: flex; justify-content: space-between;">
+                            <span>$234</span>
+                            <button type="button" class="btn " style="background-color: #A4BC46;"><i
+                                    class="fas fa-shopping-cart"></i> Buy Now</button>
+                        </div>
+
+                    </div>
+                </div>
+
+
+            </div>
+        </section>
+
+        <section></section>
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
